class Agencia(object):

    def __init__(self, numero):
        self._numero = numero
